--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </title>
     </head>
     <body>
-        <div id="header">Welcome</div>
+        <div id="header"><div id="Welcome">Welcome</div></div>
         <div id="table">
         <table>
             <tr>
