--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         </title>
     </head>
     <body>
-        <div id="header"><div id="Welcome">Welcome</div></div>
+        <div id="header"><div id="Name"><b>General Website</b></div>
+    </div>
         <div id="table">
         <table>
             <tr>
